<resources>
    <string name="app_name">MTGKusovky</string>
    <string name="title_activity_results_list">ResultsListActivity</string>
    <string name="title_activity_card_detail">CardDetailActivity</string>
    <string name="title_activity_large_picture">LargePictureActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_disclaimer">DisclaimerActivity</string>
    <string name="action_search">Nové hledání</string>
    <string name="action_settings">Možnosti</string>
    <string name="rytir">Černý Rytíř</string>
    <string name="mystic">MysticShop</string>
    <string name="najada">Najáda</string>
    <string name="rishada">Rishada</string>
    <string name="tolarie">Tolarie</string>
    <string name="lotus">Black Lotus</string>
    <string name="top_magic">TopMagic</string>
    <string name="select_all">Vybrat vše</string>
    <string name="deselect_all">Zrušit vše</string>
    <string name="hledej">Hledej</string>
    <string name="zadej">Zadejte jméno karty</string>
    <string name="no_name">Byl zadán neplatný název karty!</string>
    <string name="loading">Načítání&#8230;</string>
    <string name="data">Stahují se data.</string>
    <string name="warning_slow">(V závislosti na zadané kartě a vybraných obchodech může akce trvat až několik desítek vteřin.)</string>
    <string name="canceled_tasks">Bohužel došlo k chybě u následujících obchodů:\n</string>
    <string name="no_access">Zkontrolujte prosím připojení k internetu.</string>
    <string name="not_done_tasks">Následující obchody nebyly zpracovány:</string>
    <string name="empty_result">Nebyly nalezeny žádné odpovídající výsledky.</string>
    <string name="change_input">Zkuste upravit název hledané karty.</string>
    <string name="check_connection">Případně zkontrolujte své připojení k internetu.</string>
    <string name="not_available">Je možné, že vámi vybraný obchod danou kartu nenabízí.</string>
    <string name="manacost">Manacost:</string>
    <string name="type">Typ:</string>
    <string name="cardText">Text karty:</string>
    <string name="flavor">Flavor karty:</string>
    <string name="rulings">Dodatky k pravidlům:</string>
    <string name="legality">Hratelnost karty:</string>
    <string name="editions_header">Karta vyšla:</string>
    <string name="availability">Dostupnost karty:</string>
    <string name="name">Název:</string>
    <string name="results">Nalezené karty:</string>
    <string name="shop">Obchod:</string>
    <string name="edition">Edice:</string>
    <string name="rarity">Rarita:</string>
    <string name="version">Verze:</string>
    <string name="price">Cena:</string>
    <string name="stock">Skladem:</string>
    <string name="settings_title">Možnosti</string>
    <string name="information">Informace:</string>
    <string name="pictures">Obrázky a Historie:</string>
    <string name="with_images">with_images</string>
    <string name="img_folder">MTG_Kusovky</string>
    <string name="pref_tit_img">Stahovat obrázky karet</string>
    <string name="pref_desc_img">Vypne/Zapne stahování obrázků karet z MtgCards.info. Vypněte, pokud chcete šetřit data.</string>
    <string name="pref_img_sum_off">Stahování obrázků je vypnuto. Šetří data a místo na disku.</string>
    <string name="pref_img_sum_on">Stahování obrázků je zapnuto. Jééééé</string>
    <string name="delete_images_button">delete_images_button</string>
    <string name="delete_images">Smazat obrázky karet</string>
    <string name="delete_images_summary">Odstraní z paměti všechny obrázky karet stažené pomocí této aplikace.</string>
    <string name="delete_history">Vymazat historii hledání</string>
    <string name="delete_history_summary">Odstraní z paměti historii hledaných názvů karet.</string>
    <string name="delete_history_button">Odstraní z paměti historii hledaných názvů karet.</string>
     <plurals name="images_deleted">
        <item quantity="zero">Složka s obrázky není vytvořena.</item>
        <item quantity="one">Byl smazán jeden obrázek.</item>
        <item quantity="few">Byly smazány %d obrázky.</item>
        <item quantity="other">Bylo smazáno %d obrázků.</item>        
    </plurals>
    <plurals name="history_deleted">
        <item quantity="zero">Historie neobsahuje žádné záznamy.</item>
        <item quantity="one">Byl smazán jeden záznam.</item>
        <item quantity="few">Byly smazány %d záznamy.</item>
        <item quantity="other">Bylo smazáno %d záznamů.</item>        
    </plurals>
     <string name="img_zero">Složka s obrázky není vytvořena.</string>
     <string name="img_one">Byl smazán jeden obrázek.</string>
     <string name="img_few">Byly smazány %d obrázky.</string>
     <string name="img_other">Bylo smazáno %d obrázků.</string>
     <string name="hist_zero">Historie neobsahuje žádné záznamy.</string>
     <string name="hist_one">Byl smazán jeden záznam.</string>
     <string name="hist_few">Byly smazány %d záznamy.</string>
     <string name="hist_other">Bylo smazáno %d záznamů.</string>
    <string name="help_button">help_button</string>
    <string name="help_title">Jak používat</string>
    <string name="help_summary">Jak aplikace funguje, a na co dát pozor</string>
    <string name="info_button">info_button</string>
    <string name="info_title">Informace o aplikaci</string>
    <string name="info_summary">Pokud vás zajímá, proč aplikace vznikla&#8230;</string>
    <string name="disclaimer_button">disclaimer_button</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer_summary">Právní doložka (tak trochu)</string>
    <string name="info_desc_header">O aplikaci:</string>
    <string name="app_description">Aplikace MTGKusovky byla vytvořena jako semestrální práce z předmětu KIV/MKZ vyučovaného na Fakultě aplikovaných věd Západočeské univerzity v Plzni kde v současné době (2012/2013) studuji.\nZadání semestrální práce bylo libovolné, takže jsem si vybral téma, které je mi blízké - Magic The Gathering\nAplikaci jsem vytvořil rovněž proto, že mi podobný nástroj na domácím trhu poněkud scházel.\nNutno podotknout, že aplikace byla vytvořena a odladěna primárně pro mé zařízení - Sony Xperia P. S čímž souvisí (ne)použitelnost na některých jiných zařízeních lišících se verzí systému nebo hardwarem.</string>
    <string name="info_use_header">Použití aplikace:</string>
    <string name="app_use">Uživatel má možnost zjistit dostupnost a cenu karet ve vybraných obchodech. Případně ji může použít k přístupu k údajům ze stránky MagicCards.info, pokud  žádný obchod nevybere. Rovněž je možné aplikaci využívat pro stahování obrázků karet (které jsou posléze přístupné i offline). K informacím o kartě z MagicCards.info a obrázkům karet lze jednoduše přistupovat kliknutím na náhled karty na obrazovce s jejím detailem. (A to i když nebyla karta nalezena v žádném obchodě).</string>
    <string name="help_limits_header">Omezení aplikace:</string>
    <string name="app_limitations">Vyhledávání karet je omezeno počtem zhruba 60 kusů. U MagicCards.info se jedná o počet různých karet, u obchodů jde o počet nabízených artiklů (různé verze téže karty, tokeny, apod.) Rovněž se liší řazení výsledků u jednotlivých obchodů.</string>
    <string name="help_tips_header">Tipy:</string>
    <string name="app_tips">Při vyhledávání karet se snažte název karty zadat co nejpřesněji. Přesný název = méně možných výsledků a tedy kratší hledání a úspora při přenosu dat.  Zadávejte anglické názvy karet.</string>
    <string name="help_disclaimer_header">Dodatek:</string>
    <string name="app_disclaimer">Mějte prosím na paměti, že aplikace byla vytvořena především pro akademické účely a pro zábavu. Nejedná se o komerční projekt, ani nepočítám s jejím masovým rozšířením. Aplikace může rovněž obsahovat rozličné chyby, bugy a nepřesnosti. Doufám, že v budoucnu ji budu moci ještě lépe odladit, nicméně i tak vás prosím o schovívavost. Děkuji</string>
    <string name="author">Bc. Milan Nikl</string>
    <string name="disclaimer_text_cz">Všechny symboly, loga a loga od nich odvozená obsažená v této aplikaci, a rovněž obrázky stažené díky této aplikaci jsou majetkem společnosti Wizards of the Coast. Autor této aplikace si nedělá žádné nároky na jejich vlastnictví. Materiály obsažené v této aplikaci jsou použity pouze pro ilustrativní účely.\nRovněž bych rád uvedl, že na aplikaci a jejím vývoji se nepodílela ani společnost Wizards of the Coast, ani žádný z internetových obchodů, na jejichž stránkách probíhá vyhledávání karet. Aplikace nebyla vytvořena za účelem zisku, či obohacení autora. Ani není jejím účelem propagovat některý z uvedených obchodů.</string>
    <string name="disclaimer_text_en">All symbols, logos and logos derived from them used in this app and pictures downloaded by using this app are copyrighted by Wizards of the Coast. All mentioned images and parts of them are used for illustrational purposes. So it is believed that use of these images qualifies as Fair Use under United States Copyright Law.\nNeither the Wizards of the Coast company nor any of the shops used for search did not participated on this app development. This app was created for non-profit use. Its only goal is to help Magic the Gathering players, not to promote any of the shops mentioned in the app.</string>
    <string name="history">history</string>
    <string name="sample">Příklad ceny</string>
</resources>