<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HelpActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/GroupIndicator"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_weight="0.07"
            android:src="@drawable/mentor" />

        <TextView
            android:id="@+id/LargeEditionsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_line"
            android:text="@string/info_use_header"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/larger_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/LargeEditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_line"
            android:text="@string/app_use"
            android:textSize="@dimen/larger_text" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_line"
            android:text="@string/help_limits_header"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/larger_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_line"
            android:text="@string/app_limitations"
            android:textSize="@dimen/larger_text" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_line"
            android:text="@string/help_tips_header"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/larger_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_line"
            android:text="@string/app_tips"
            android:textSize="@dimen/larger_text" />
    </LinearLayout>

</ScrollView>
